# repoview

./: .gitignore  README.md  pyproject.toml  repo_management.py  requirements.txt  settings.py
tasks/: __init__.py  class_of_2028_2.csv  clone_repos.sh  dp.csv  helpers.py  many_template_repos.sh  repo_management.py  settings.py  teachers.csv  year2-1.csv  year2-2.csv
zarchive/: errors.py  helpers.py
