[project]
name = "repoview"
version = "0.1.0"
description = ""
authors = [
    {name = "eqbrown_teacher",email = "nobody@makingwithcode.org"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygithub (>=2.7.0,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "tasks (>=2.8.0,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
